--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -19,7 +19,7 @@ year: 2016
         </ul>
         <div class="info pitch">Candida il tuo progetto musicale o il tuo stand espositivo</div>
         <div class="info email">
-          <%= link_to data.contacts.email, "mailto:#{data.contacts.email}" %>
+          <%= link_to "Iscriviti Qui", "mailto:#{data.contacts.email}" %>
         </div>
       </div>
       <div class="waves"></div>
