--- a/source/css/custom.css
+++ b/source/css/custom.css
@@ -20,7 +20,7 @@
 
 /* --- GLOBAL TWEAKS --- */
 body {
-  background: #edd7a9 url("../img/background.jpg") ;
+  background: #d7eef4;
   background-position: center top;
   background-attachment: fixed;
   background-size: cover;
@@ -59,20 +59,18 @@ body.fluid {
   background: url(../img/banner.png) no-repeat;
   background-size: cover;
   background-position: center center;
-  padding-top: 62.09%;
+  padding-top: 46.77%;
 }
 
 #header .title {
   font-family: big-noodle, Arial, sans-serif;
   line-height: 1;
-  color: #3d3d3f;
+  color: #00aad6;
   font-size: 100px;
   text-align: center;
 }
 #header .title span {
-  position: relative;
-  top: -1.1em;
-  font-size: 0.4em;
+  color: #fff;
 }
 @media screen and (max-width: 650px) {
   #header .title {
@@ -115,12 +113,10 @@ body.fluid {
 #header .subtitle .info li.text span{
   padding-left: 3px;
   padding-right: 3px;
-  background-color: #f8b219;
-  color: #f0f0f0;
-  border-radius: 2px;
+  color: #182259;
 }
 #header .subtitle .info.secondary li.text span{
-  background-color: #83b6b1;
+  color: #00aad6;
 }
 #header .subtitle .info li.icon.first {
   padding-left: 6px;
@@ -176,7 +172,7 @@ body.fluid {
 
 /* --- NAVBAR --- */
 #header .navigation {
-  background-color: rgba(248,178,25,0.7);
+  background-color: #95cce7;
   margin-left: -10px;
   margin-right: -10px;
   border: none;
@@ -189,18 +185,18 @@ body.fluid {
 #header .navigation .nav a {
   font-family: big-noodle, Arial, sans-serif;
   font-size: 20px;
-  color: #3d3d3f;
+  color: #fff;
   padding: 3px 22px;
   line-height: 1.42857;
 }
 #header .navigation .nav a:hover {
-  background-color: #84b6b0;
-  color: #f0f0f0;
+  background-color: #00aad6;
+  color: #182259;
   border-radius: 4px;
 }
 #header .navigation .nav a:focus {
-  background-color: #84b6b0;
-  color: #f0f0f0;
+  background-color: #00aad6;
+  color: #182259;
   border-radius: 4px;
 }
 #header .navbar-header .navbar-brand {
