--- a/source/partials/_header.erb
+++ b/source/partials/_header.erb
@@ -3,11 +3,11 @@
     <% link_to "/", :class => "home-link" do %>
     <div class="image"></div>
     <% end %>
-    <div class="title">Tendenze Festival<span>3.0</span></div>
+    <div class="title">Tendenze Festival <span>2016</span></div>
     <div class="subtitle">
       <ul class="info primary">
-        <li class="text"><span>XXI Edizione</span></li>
-        <li class="text"><span>18-19-20 Settembre</span></li>
+        <li class="text"><span>XXII Edizione</span></li>
+        <li class="text"><span>15-16-17-18 Settembre</span></li>
         <li class="text"><span>Spazio 4 - Via Manzoni 21 - Piacenza</span></li>
         <li class="icon first hidden-xs hidden-sm">
           <% link_to data.contacts.facebook, :target => "_blank" do %>
@@ -26,14 +26,15 @@
         </li>
       </ul>
       <ul class="info secondary">
-        <li class="text"><span>Free entry</span></li>
-        <li class="text"><span>Start ore 18</span></li>
+        <li class="text"><span>3 stage</span></li>
         <li class="text"><span>Oltre 60 band</span></li>
         <li class="text"><span>DJ &amp; live set</span></li>
         <li class="text"><span>Streetfood &amp; drinks</span></li>
-        <li class="text"><span>Expo | Interazione</span></li>
-        <li class="text"><span>Installazioni | Artigianato</span></li>
-        <li class="text"><span>&amp; more</span></li>
+        <li class="text"><span>3D mapping visual show</span></li>
+        <li class="text"><span>Expo</span></li>
+        <li class="text"><span>Installazioni</span></li>
+        <li class="text"><span>Artigianato</span></li>
+        <li class="text"><span>Free Entry</span></li>
       </ul>
       <ul class="info contacts">
         <li class="icon first hidden-md hidden-lg">
