--- a/source/css/custom.css
+++ b/source/css/custom.css
@@ -232,14 +232,22 @@ body.fluid {
 }
 
 #footer {
-  background-color: rgba(248,178,25,0.7);
-  margin-top: 50px;
+  background-color: #c1e3f0;
+  margin-top: 20px;
   margin-left: -10px;
   margin-right: -10px;
-  padding-top: 3px;
   padding-bottom: 3px;
   text-align: center;
 
+}
+#footer::before {
+  content: " ";
+  display: block;
+  width: 100%;
+  background: #d7eef4 url("../img/footer/waves.svg") no-repeat;
+  background-size: cover;
+  background-position: center center;
+  padding-top: 17.18%;
 }
 #footer img,
 #footer a {
@@ -257,16 +265,9 @@ body.fluid {
   display: inline-block;
   max-width: 75px;
 }
-#footer .fondazione {
-  max-width: 139px;
-  margin-left: 16px;
-}
 @media screen and (max-width: 600px) {
   #footer a {
     display: block;
-    margin: 0 auto;
-  }
-  #footer .fondazione {
     margin: 0 auto;
   }
 }
