--- a/source/css/custom.css
+++ b/source/css/custom.css
@@ -199,13 +199,13 @@ body.fluid {
 #header .navbar-header .navbar-brand {
   font-family: big-noodle, Arial, sans-serif;
   font-size: 30px;
-  color: #3d3d3f;
+  color: #fff;
 }
 #header .navigation .navbar-toggle {
-  background-color: #3d3d3f;
+  background-color: #182259;
 }
 #header .navigation .navbar-toggle .icon-bar {
-  background-color: #f9f9f9;
+  background-color: #fff;
 }
 @media screen and (max-width: 992px) {
   #header .navigation .nav a {
