--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,3 +1,8 @@
+<div class="home-links row">
+  <%= partial "partials/home_link", :locals => { :link => "brochure", :image => "news/brochure.jpg", :title => "Scarica il PDF del programma" } %>
+  <%= partial "partials/home_link", :locals => { :link => "mappa", :image => "news/mappa.jpg", :title => "Vai alla mappa" } %>
+  <%= partial "partials/home_link", :locals => { :link => "/foto.html", :image => "news/foto.jpg", :title => "Guarda le foto del festival" } %>
+</div>
 <div id="news" class="row">
   <div class="news-container col-xs-12 col-sm-12 col-md-12">
     <div class="heading">News</div>
