Home link color.

--- a/source/css/custom.css
+++ b/source/css/custom.css
@@ -323,7 +323,7 @@ body.fluid {
   margin-top: 5px;
 }
 .news-container .news a {
-  color: #3d3d3f;
+  color: #182259;
   text-decoration: underline;
 }
 .news-container .news .content ul {
