--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,3 +1,7 @@
+---
+main_header: true
+---
+
 <div class="home-links row">
   <%= partial "partials/home_link", :locals => { :link => "brochure", :image => "news/brochure.jpg", :title => "Scarica il PDF del programma" } %>
   <%= partial "partials/home_link", :locals => { :link => "mappa", :image => "news/mappa.jpg", :title => "Vai alla mappa" } %>
