--- a/source/band.html.erb
+++ b/source/band.html.erb
@@ -1,7 +1,7 @@
 <div class="modal-container container-fluid">
   <div class="row color-<%= color_index %>">
     <div class="banner col-xs-12 col-sm-12 col-md-12">
-      <% banner_path = data["banner"]? data["banner"] : "bands/banners/base.jpg" %>
+      <% banner_path = data["banner"]? data["banner"] : "bands/banners/base.png" %>
       <%= image_tag banner_path, :class => "img-responsive" %>
     </div>
     <div class="content col-xs-12 col-sm-12 col-md-12">
