--- a/source/book.html.erb
+++ b/source/book.html.erb
@@ -18,11 +18,11 @@
       <div class="text"><%= data["text"] %></div>
       <div class="logo">
         <% if color_index == 0 %>
-        <%= image_tag "bands/logo_orange.png" %>
+        <%= image_tag "bands/logo_purple.png" %>
         <% elsif color_index == 1 %>
-        <%= image_tag "bands/logo_white.png" %>
-        <% else %>
         <%= image_tag "bands/logo_green.png" %>
+        <% else %>
+        <%= image_tag "bands/logo_blue.png" %>
         <% end %>
       </div>
     </div>
