--- a/source/programma.html.erb
+++ b/source/programma.html.erb
@@ -93,10 +93,11 @@ title: Programma
       </div>
     </div>
 
-    <div id="map" class="map">
+    <!-- <div id="map" class="map">
       <div class="day color-0"><span>Area Festival</span></div>
       <%= image_tag "map.jpg", :class => "img-responsive" %>
     </div>
+    -->
     <div class="return link"><%= link_to "Torna in cima", "#top" %></div>
   </div>
 </div>
