--- a/source/festival.html.erb
+++ b/source/festival.html.erb
@@ -48,7 +48,7 @@ title: Il Festival
     </div>
     <div class="org">
       <div class="sponsors">
-        <h2 class="title">Con il sostegno di</h2>
+        <h2 class="title">Partners</h2>
         <ul class="logos">
           <% data.logos.sponsors.each do |s| %>
           <li>
