--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,7 +3,7 @@ main_header: true
 ---
 
 <div class="home-links row">
-  <%= partial "partials/home_link", :locals => { :link => "brochure", :image => "news/brochure.jpg", :title => "Scarica il PDF del programma" } %>
+  <%= partial "partials/home_link", :locals => { :link => "download/brochure.pdf", :image => "news/brochure.jpg", :title => "Scarica il PDF del programma" } %>
   <%= partial "partials/home_link", :locals => { :link => "mappa", :image => "news/mappa.jpg", :title => "Vai alla mappa" } %>
   <%= partial "partials/home_link", :locals => { :link => "/foto.html", :image => "news/foto.jpg", :title => "Guarda le foto del festival" } %>
 </div>
