--- a/source/css/custom.css
+++ b/source/css/custom.css
@@ -743,7 +743,8 @@ body.fluid {
   margin-bottom: 3px;
 }
 .extra-container .exhibitor .description a {
-  color: #3d3d3f;
+  color: #182259;
+  text-decoration: underline;
 }
 .extra-container .exhibitor .banner {
   overflow: hidden;
