--- a/source/festival.html.erb
+++ b/source/festival.html.erb
@@ -1,5 +1,5 @@
 ---
-title: Il Festival
+title: TENDENZE FESTIVAL 2016 | XXII EDIZIONE
 ---
 
 <% content_for :additional_js do %>
@@ -48,25 +48,29 @@ title: Il Festival
     </div>
     <div class="org">
       <div class="sponsors">
-        <h2 class="title">Partners</h2>
+        <h2 class="title">Sponsor</h2>
         <ul class="logos">
           <% data.logos.sponsors.each do |s| %>
           <li>
-            <% link_to s.link, :target => "_blank" do %>
+            <% link_to s.link, :target => "_blank", :rel => "noopener" do %>
               <%= image_tag s.image, :class => "img-responsive" %>
-            <%end %>
+            <% end %>
           </li>
           <% end %>
         </ul>
       </div>
       <div class="collaborations">
-        <h2 class="title">In collaborazione con</h2>
+        <h2 class="title">Partners</h2>
         <ul class="logos">
           <% data.logos.collaborators.each do |c| %>
           <li>
-            <% link_to c.link, :target => "_blank" do %>
+            <% if c.link %>
+              <% link_to c.link, :target => "_blank", :rel => "noopener" do %>
+                <%= image_tag c.image, :class => "img-responsive" %>
+              <% end %>
+            <% else %>
               <%= image_tag c.image, :class => "img-responsive" %>
-            <%end %>
+            <% end %>
           </li>
           <% end %>
         </ul>
