Home links update.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,8 +4,8 @@ main_header: true
 
 <div class="home-links row">
   <%= partial "partials/home_link", :locals => { :link => "download/brochure.pdf", :image => "news/brochure.jpg", :title => "Scarica il PDF del programma" } %>
-  <%= partial "partials/home_link", :locals => { :link => "mappa", :image => "news/mappa.jpg", :title => "Vai alla mappa" } %>
-  <%= partial "partials/home_link", :locals => { :link => "/foto.html", :image => "news/foto.jpg", :title => "Guarda le foto del festival" } %>
+  <%= partial "partials/home_link", :locals => { :link => "/programma.html#map", :image => "news/mappa.jpg", :title => "Vai alla mappa" } %>
+  <%= partial "partials/home_link", :locals => { :link => data.contacts.facebook, :image => "news/fb.jpg", :title => "Vai alla pagina Facebook", :external => true } %>
 </div>
 <div id="news" class="row">
   <div class="news-container col-xs-12 col-sm-12 col-md-12">
