--- a/source/partials/_home_link.erb
+++ b/source/partials/_home_link.erb
@@ -1,6 +1,8 @@
+<% external ||= false %>
+
 <div class="col-xs-12 col-sm-4 col-md-4">
   <div class="wrapper">
-    <% link_to link, :class => "link" do %>
+    <% link_to link, :class => "link", :target => external ? "_blank" : nil, :rel => "noopener" do %>
       <%= image_tag image, :class => "img-responsive image" %>
       <div class="overlay">
         <div class="title"><%= title %></div>
