--- a/source/expo.html.erb
+++ b/source/expo.html.erb
@@ -6,7 +6,7 @@ title: Expo
   <div class="expo-container col-xs-12 col-sm-12 col-md-12">
     <div class="heading"><%= current_page.data.title %></div>
     <div class="intro">
-      Come ogni anno Tendenze Festival vi propone un percorso attraverso il meglio dell'Expo alternativo ed innovativo, tra artigianato, vintage, musica, creatività e associazionismo in tutte le sue forme. <strong>La lista e le schede sono in continuo aggiornamento!</strong>
+      Come ogni anno Tendenze Festival vi propone un percorso attraverso il meglio dell'Expo alternativo ed innovativo, tra artigianato, vintage, musica, creatività e associazionismo in tutte le sue forme.
     </div>
     <% data.expo.each do |name| %>
     <% data = get_data("expo", name) %>
