--- a/source/partials/_head.erb
+++ b/source/partials/_head.erb
@@ -7,7 +7,7 @@
   <meta name="author" content="">
   <meta property="og:title" content="Tendenze Festival 2016" />
   <meta property="og:description" content="15-16-17-18 Settembre - Piacenza" />
-  <meta property="og:image" content="/img/banner.png" />
+  <meta property="og:image" content="/img/og-image.jpg" />
 
   <%= favicon_tag 'favicon.ico' %>
 
