Generate news with prefix.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -10,10 +10,16 @@ main_header: true
 <div id="news" class="row">
   <div class="news-container col-xs-12 col-sm-12 col-md-12">
     <div class="heading">News</div>
-    <% get_md_files("data/news").reverse_each do |name| %>
-    <% data = get_data("news", name) %>
+    <% get_md_files("data/news/2016").reverse_each do |name| %>
+    <% data = get_data("news/2016", name) %>
       <% data["id"] = name %>
-      <%= partial "partials/news", :locals => { :data => data, :summary => true } %>
+      <%= partial "partials/news", :locals => { :data => data, :prefix => "2016", :summary => true } %>
+    <% end %>
+    <div class="heading">Archivio 2015</div>
+    <% get_md_files("data/news/2015").reverse_each do |name| %>
+    <% data = get_data("news/2015", name) %>
+      <% data["id"] = name %>
+      <%= partial "partials/news", :locals => { :data => data, :prefix => "2015", :summary => true } %>
     <% end %>
   </div>
 </div>
