--- a/source/news.html.erb
+++ b/source/news.html.erb
@@ -1,6 +1,6 @@
 <div id="news" class="row">
   <div class="news-container col-xs-12 col-sm-12 col-md-12">
     <div class="heading">News</div>
-    <%= partial "partials/news", :locals => { :data => data, :summary => false } %>
+    <%= partial "partials/news", :locals => { :data => data, :prefix => prefix, :summary => false } %>
   </div>
 </div>
