--- a/source/css/custom.css
+++ b/source/css/custom.css
@@ -1,27 +1,22 @@
-@font-face {
-  font-family: big-noodle;
-  src: url('../fonts/big_noodle_titling.woff') format('woff');
-}
-@font-face {
-  font-family: big-noodle;
-  src: url('../fonts/big_noodle_titling_oblique.woff') format('woff');
-  font-style: oblique;
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
+.color-red {
+  color: #d31313;
 }
 
-@font-face {
-  font-family: cabin-sketch;
-  src: url('../fonts/CabinSketch-Regular.woff') format('woff');
+.color-green {
+  color: #0ecd1c;
 }
-@font-face {
-  font-family: cabin-sketch;
-  src: url('../fonts/CabinSketch-Bold.woff') format('woff');
-  font-weight: bold;
+
+.color-blue {
+  color: #093cce;
 }
 
 /* --- GLOBAL TWEAKS --- */
 body {
-  background: #d7eef4;
+  background: #fff url("../img/background.jpg") repeat;
   padding-top: 5px;
+  font-family: Montserrat, Arial, sans-serif;
   font-size: 14px;
   color: #182259;
 }
@@ -39,7 +34,6 @@ body.fluid {
 }
 
 .main-content .heading {
-  font-family: big-noodle, Arial, sans-serif;
   line-height: 1;
   font-size: 35px;
   margin-top: 15px;
@@ -47,6 +41,11 @@ body.fluid {
 }
 
 /* --- HEADER --- */
+#header {
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #000;
+}
 #header .banner .home-link {
   display: block;
   max-width: 620px;
@@ -56,73 +55,64 @@ body.fluid {
   background: url(../img/banner.png) no-repeat;
   background-size: cover;
   background-position: center center;
-  padding-top: 27.41%;
-}
-#header.big .banner .home-link .image {
-  background: url(../img/banner-big.png) no-repeat;
-  background-size: cover;
-  background-position: center center;
   padding-top: 46.77%;
 }
 
 #header .title {
-  font-family: big-noodle, Arial, sans-serif;
+  padding: 20px 0;
+  margin: 0 auto;
+  max-width: 800px;
   line-height: 1;
-  color: #00aad6;
-  font-size: 100px;
+  font-size: 30px;
   text-align: center;
-}
-#header .title span {
-  color: #fff;
 }
 @media screen and (max-width: 650px) {
   #header .title {
-    font-size: 80px;
+    font-size: 25px;
   }
 }
 @media screen and (max-width: 515px) {
   #header .title {
-    font-size: 70px;
+    font-size: 20px;
   }
 }
 @media screen and (max-width: 460px) {
   #header .title {
-    font-size: 60px;
+    font-size: 18px;
+    max-width: 400px;
   }
 }
 @media screen and (max-width: 400px) {
   #header .title {
-    font-size: 50px;
+    font-size: 15px;
+    margin: 0px -15px;
   }
 }
 
+#header .subtitle {
+  margin-top: -12px;
+  margin-bottom: 12px;
+}
+
 #header .subtitle .info {
-  font-family: big-noodle, Arial, sans-serif;
-  font-size: 30px;
+  font-size: 20px;
   text-align: center;
   list-style-type: none;
   padding: 0;
-  margin-bottom: 12px;
-  margin-top: -12px
-}
-#header .subtitle .info.secondary {
-  margin-bottom: 30px;
-  font-size: 18px;
+  margin-bottom: 0;
 }
 #header .subtitle .info li {
   display: inline-block;
   line-height: 1.1;
 }
-#header .subtitle .info li.text span{
-  padding-left: 3px;
-  padding-right: 3px;
-  color: #182259;
-}
-#header .subtitle .info.secondary li.text span{
-  color: #00aad6;
+#header .subtitle .info li.text+li.text:before {
+  content: '| ';
 }
 #header .subtitle .info li.icon.first {
   padding-left: 6px;
+}
+#header .subtitle .icon {
+  vertical-align: text-bottom;
 }
 #header .subtitle .icon img {
   max-width: 25px;
@@ -134,48 +124,35 @@ body.fluid {
   #header .subtitle .info li.icon.first {
     padding-left: 0px;
   }
-  #header .subtitle .info.secondary {
-    margin-bottom: 2px;
-  }
   #header .subtitle .info.contacts {
     margin-bottom: 10px;
-    margin-top: -5px;
+    margin-top: 3px;
   }
 }
 @media screen and (max-width: 768px) {
   #header .subtitle .info {
     margin-top: 0;
+    font-size: 15px;
   }
   #header .subtitle .info.primary {
     margin-bottom: 0;
-  }
-  #header .subtitle .info.primary li {
-    display: block;
-  }
-  #header .subtitle .info.secondary {
-    font-size: 16px;
-    padding-left: 65px;
-    padding-right: 65px;
-    margin-bottom: 2px;
   }
   #header .subtitle .info li.text {
     margin-bottom: 2px;
   }
 }
 @media screen and (max-width: 460px) {
-  #header .subtitle .info {
-    font-size: 20px;
+  #header .subtitle .info.primary li:first-child {
+    display: block;
   }
-  #header .subtitle .info.secondary {
-    padding-left: 0;
-    padding-right: 0;
-    margin-bottom: 8px;
+  #header .subtitle .info li.text:first-child+li.text:before {
+    content: '';
   }
 }
 
 /* --- NAVBAR --- */
 #header .navigation {
-  background-color: #95cce7;
+  background-color: #000;
   margin-left: -10px;
   margin-right: -10px;
   border: none;
@@ -186,37 +163,37 @@ body.fluid {
   min-height: 34px;
 }
 #header .navigation .nav a {
-  font-family: big-noodle, Arial, sans-serif;
-  font-size: 20px;
+  font-size: 15px;
   color: #fff;
-  padding: 3px 22px;
-  line-height: 1.42857;
+  padding: 3px 15px;
+  line-height: 2;
 }
 #header .navigation .nav a:hover {
-  background-color: #00aad6;
-  color: #182259;
+  background-color: #fff;
+  color: #000;
   border-radius: 4px;
 }
 #header .navigation .nav a:focus {
-  background-color: #00aad6;
-  color: #182259;
+  background-color: #fff;
+  color: #000;
   border-radius: 4px;
 }
 #header .navbar-header .navbar-brand {
   font-family: big-noodle, Arial, sans-serif;
-  font-size: 30px;
+  font-size: 20px;
   color: #fff;
 }
 #header .navigation .navbar-toggle {
-  background-color: #182259;
+  background-color: #000;
 }
 #header .navigation .navbar-toggle .icon-bar {
   background-color: #fff;
 }
 @media screen and (max-width: 992px) {
   #header .navigation .nav a {
-    padding-left: 16px;
-    padding-right: 16px;
+    font-size: 13px;
+    padding-left: 12px;
+    padding-right: 12px;
   }
 }
 @media screen and (min-width: 768px) {
