--- a/source/partials/_head.erb
+++ b/source/partials/_head.erb
@@ -1,19 +1,20 @@
+<%# Use title if it's in the page YAML frontmatter %>
+<% year = current_page.data.year ? current_page.data.year : Time.new.year %>
+<% base_title = "XNL " + year.to_s %>
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Tendenze Festival 2016">
+  <meta name="description" content="<%= base_title %>">
   <meta name="author" content="">
-  <meta property="og:title" content="Tendenze Festival 2016" />
-  <meta property="og:description" content="15-16-17-18 Settembre - Piacenza" />
+  <meta property="og:title" content="<%= base_title %>" />
+  <meta property="og:description" content="18-19-20 Maggio - Piacenza" />
   <meta property="og:image" content="/img/og-image.jpg" />
 
   <%= favicon_tag 'favicon.ico' %>
 
-  <%# Use title if it's in the page YAML frontmatter %>
-  <% year = current_page.data.year ? current_page.data.year : 2016 %>
-  <% base_title = "Tendenze Festival " + year.to_s %>
   <title>
     <%= current_page.data.title ? (base_title + " | " + current_page.data.title).strip() : base_title %>
   </title>
