--- a/source/css/custom.css
+++ b/source/css/custom.css
@@ -381,7 +381,7 @@ body.fluid {
   margin-bottom: 3px;
 }
 .festival-container a {
-    color: #182259;
+    color: #000;
     text-decoration: underline;
 }
 .festival-container .org {
@@ -432,7 +432,7 @@ body.fluid {
   padding-top: 10px;
 }
 #lineup .image {
-  background: #0e1543;
+  background: #000 url("../img/bands/thumbs/empty.jpg") center top / cover;
   max-width: 204px;
   margin: 0 auto;
   border: 1px solid #3D3D3F;
@@ -447,38 +447,21 @@ body.fluid {
   top: 0;
 }
 #lineup .image .name {
-  background: #0e1543;
-  font-family: big-noodle, Arial, sans-serif;
-  font-size: 25px;
-  line-height: 1;
-  color: #f0f0f0;
+  background: #000;
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 1.1;
+  color: #fff;
   text-align: center;
   position: absolute;
   bottom: 0;
   width: 100%;
-  padding-left: 5px;
-  padding-right: 5px;
-  padding-top: 1px;
-  padding-bottom: 4px;
+  padding: 6px 5px;
 }
 @media screen and (max-width: 447px) {
   #lineup .band .image .name {
-    font-size: 23px;
-  }
-}
-@media screen and (max-width: 400px) {
-  #lineup .band .image .name {
-    font-size: 22px;
-  }
-}
-@media screen and (max-width: 390px) {
-  #lineup .band .image .name {
-    font-size: 19px;
-  }
-}
-@media screen and (max-width: 370px) {
-  #lineup .band .image .name {
-    font-size: 18px;
+    font-size: 17px;
+    padding: 8px 5px;
   }
 }
 @media screen and (max-width: 340px) {
@@ -493,14 +476,15 @@ body.fluid {
   }
 }
 #lineup .image .name.color-0 {
-  color: #b2bdff;
+  color: #d31313;
 }
 #lineup .image .name.color-1 {
-  color: #a9ffb5;
+  color: #0ecd1c;
 }
 #lineup .image .name.color-2 {
-  color: #d7eef4;
+  color: #093cce;
 }
+
 #lineup .image.link {
   -webkit-transition: all 0.25s ease 0s;
      -moz-transition: all 0.25s ease 0s;
@@ -521,11 +505,11 @@ body.fluid {
 }
 
 .band-info.modal-content {
-  background: #0e1543 url("../img/background-bands.jpg") repeat-x fixed center top / cover;
+  background: #000 url("../img/background-bands.jpg") repeat-x fixed center top / cover;
 }
 
 .modal-container {
-  color: #c1c0c0;
+  color: #fff;
   font-weight: bold;
 }
 .modal-container .buttons {
@@ -536,7 +520,6 @@ body.fluid {
   display: inline-block;
 }
 .modal-container .return {
-  font-family: big-noodle, Arial, sans-serif;
   font-size: 18px;
   font-weight: normal;
   line-height: 1;
@@ -554,39 +537,39 @@ body.fluid {
   border-radius: 2px;
 }
 .modal-container .color-0 .return a {
-  border: 1px solid #b2bdff;
+  border: 1px solid #d31313;
 }
 .modal-container .color-1 .return a {
-  border: 1px solid #a9ffb5;
+  border: 1px solid #0ecd1c;
 }
 .modal-container .color-2 .return a{
-  border: 1px solid #d7eef4;
+  border: 1px solid #093cce;
 }
 .modal-container .color-0 .title,
 .modal-container .color-0 .return a {
-  color: #b2bdff;
+  color: #d31313;
 }
 .modal-container .color-1 .title,
 .modal-container .color-1 .return a {
-  color: #a9ffb5;
+  color: #0ecd1c;
 }
 .modal-container .color-2 .title,
 .modal-container .color-2 .return a {
-  color: #d7eef4;
+  color: #093cce;
 }
 .modal-container .color-0 .return a:hover {
   color: #182259;
-  background-color: #b2bdff;
+  background-color: #d31313;
   text-decoration: none;
 }
 .modal-container .color-1 .return a:hover {
   color: #182259;
-  background-color: #a9ffb5;
+  background-color: #0ecd1c;
   text-decoration: none;
 }
 .modal-container .color-2 .return a:hover {
   color: #182259;
-  background-color: #d7eef4;
+  background-color: #093cce;
   text-decoration: none;
 }
 .modal-container .banner {
@@ -610,11 +593,10 @@ body.fluid {
   font-size: 14px;
 }
 .modal-container .content .info span {
-  color: #f0f0f0;
+  color: #fff;
 }
 .modal-container .title {
-  font-family: big-noodle, Arial, sans-serif;
-  font-weight: normal;
+  font-weight: bold;
   margin-top: 10px;
 }
 .modal-container .name {
@@ -770,13 +752,13 @@ body.fluid {
   display: inline-block;
 }
 .agenda-container .day.color-0 {
-  color: #b2bdff;
+  color: #d31313;
 }
 .agenda-container .day.color-1 {
-  color: #a9ffb5;
+  color: #0ecd1c;
 }
 .agenda-container .day.color-2 {
-  color: #d7eef4;
+  color: #093cce;
 }
 .agenda-container .map {
   margin: 0 auto;
@@ -825,7 +807,7 @@ body.fluid {
   background-color: #182259;
 }
 .agenda-container .schedule th.stage:nth-child(even) {
-  background-color: #b2bdff;
+  background-color: #d31313;
 }
 .agenda-container .schedule tr:nth-child(odd) {
   background-color: rgba(168, 197, 205, 0.8);
@@ -861,15 +843,15 @@ body.fluid {
 }
 .agenda-container .schedule tfoot .after.color-0 td,
 .agenda-container .schedule tfoot .after.color-0 td.link a {
-  color: #b2bdff;
+  color: #d31313;
 }
 .agenda-container .schedule tfoot .after.color-1 td,
 .agenda-container .schedule tfoot .after.color-1 td.link a {
-  color: #a9ffb5;
+  color: #0ecd1c;
 }
 .agenda-container .schedule tfoot .after.color-2 td,
 .agenda-container .schedule tfoot .after.color-2 td.link a {
-  color: #d7eef4;
+  color: #093cce;
 }
 .agenda-container .return.link {
   margin-top: 40px;
@@ -886,7 +868,7 @@ body.fluid {
 .agenda-container .return.link a:hover {
   text-decoration: none;
   background-color: #182259;
-  color: #b2bdff;
+  color: #d31313;
 }
 @media screen and (min-width: 992px) {
   .agenda-container .schedule td.band.link:hover,
@@ -927,7 +909,7 @@ body.fluid {
     background-color: #182259;
   }
   .agenda-container .schedule th.stage.even {
-    background-color: #b2bdff;
+    background-color: #d31313;
   }
   .agenda-container .map .day span {
     font-size: 50px;
