--- a/source/css/custom.css
+++ b/source/css/custom.css
@@ -411,7 +411,7 @@ body.fluid {
 }
 .festival-container .photos img {
   margin: 0 auto;
-  border: 2px solid #3D3D3F;
+  border: 2px solid #000;
 }
 .festival-container .org .collaborations {
   max-width: 800px;
@@ -435,7 +435,7 @@ body.fluid {
   background: #000 url("../img/bands/thumbs/empty.jpg") center top / cover;
   max-width: 204px;
   margin: 0 auto;
-  border: 1px solid #3D3D3F;
+  border: 1px solid #000;
   box-shadow: 10px 10px 7px rgba(0, 0, 0, 0.4);
   position: relative;
 }
@@ -558,17 +558,17 @@ body.fluid {
   color: #093cce;
 }
 .modal-container .color-0 .return a:hover {
-  color: #182259;
+  color: #000;
   background-color: #d31313;
   text-decoration: none;
 }
 .modal-container .color-1 .return a:hover {
-  color: #182259;
+  color: #000;
   background-color: #0ecd1c;
   text-decoration: none;
 }
 .modal-container .color-2 .return a:hover {
-  color: #182259;
+  color: #000;
   background-color: #093cce;
   text-decoration: none;
 }
@@ -686,7 +686,7 @@ body.fluid {
   max-height: 300px;
   overflow: hidden;
   margin: 0 auto;
-  border: 1px solid #3d3d3f;
+  border: 1px solid #000;
   box-shadow: 10px 10px 7px rgba(0, 0, 0, 0.4);
 }
 
@@ -699,12 +699,12 @@ body.fluid {
   padding-top: 20px;
 }
 .agenda-container .day span {
-  font-family: big-noodle, Arial, sans-serif;
   font-size: 70px;
+  font-weight: bold;
   line-height: 1;
   padding: 10px 25px;
   border-radius: 4px;
-  background-color: #3d3d3f;
+  background-color: #000;
   display: inline-block;
 }
 .agenda-container .day.color-0 {
@@ -723,7 +723,7 @@ body.fluid {
   margin-bottom: 40px;
 }
 .agenda-container .map img {
-  border: 7px solid #3d3d3f;
+  border: 7px solid #000;
   border-radius: 4px;
 }
 .agenda-container .schedule {
@@ -739,16 +739,16 @@ body.fluid {
 .agenda-container .schedule td {
   text-align: center;
   line-height: 1.1;
-  color: #f0f0f0;
+  color: #fff;
   height: 30px;
 }
 .agenda-container .schedule th {
-  background-color: #3d3d3f;
+  background-color: #000;
   font-weight: normal;
 }
 .agenda-container .schedule thead th {
-  font-family: big-noodle, Arial, sans-serif;
-  font-size: 20px;
+  font-size: 14px;
+  font-weight: bold;
   line-height: 1;
   padding-left: 5px;
   padding-right: 5px;
@@ -760,7 +760,7 @@ body.fluid {
   width: 60px;
 }
 .agenda-container .schedule th.stage:nth-child(odd) {
-  background-color: #182259;
+  background-color: #000;
 }
 .agenda-container .schedule th.stage:nth-child(even) {
   background-color: #d31313;
@@ -772,11 +772,11 @@ body.fluid {
   background-color: rgba(150, 179, 187, 0.8);
 }
 .agenda-container .schedule td {
-  color: #3d3d3f;
+  color: #000;
   padding: 0 14px;
 }
 .agenda-container .schedule td.band.link a {
-  color: #3d3d3f;
+  color: #000;
 }
 .agenda-container .schedule td.book,
 .agenda-container .schedule td.book.link a {
@@ -791,10 +791,10 @@ body.fluid {
   text-decoration: underline;
 }
 .agenda-container .schedule td.multilink a {
-  color: #3d3d3f;
+  color: #000;
 }
 .agenda-container .schedule tfoot .after {
-  background-color: #3d3d3f;
+  background-color: #000;
   text-transform: none;
 }
 .agenda-container .schedule tfoot .after.color-0 td,
@@ -814,16 +814,15 @@ body.fluid {
   text-align: center;
 }
 .agenda-container .return.link a {
-  font-family: big-noodle, Arial, sans-serif;
   font-size: 30px;
-  color: #182259;
+  color: #000;
   padding: 3px 5px;
-  border: 3px solid #182259;
+  border: 3px solid #000;
   border-radius: 3px;
 }
 .agenda-container .return.link a:hover {
   text-decoration: none;
-  background-color: #182259;
+  background-color: #000;
   color: #d31313;
 }
 @media screen and (min-width: 992px) {
@@ -862,7 +861,7 @@ body.fluid {
     height: 30px;
   }
   .agenda-container .schedule th.stage.odd {
-    background-color: #182259;
+    background-color: #000;
   }
   .agenda-container .schedule th.stage.even {
     background-color: #d31313;
@@ -902,7 +901,7 @@ body.fluid {
   margin-top: 25px;
 }
 .photos-container .entry .galleries a {
-  color: #3d3d3f;
+  color: #000;
 }
 .photos-container .entry .gallery {
   padding: 10px 30px;
