--- a/source/band.html.erb
+++ b/source/band.html.erb
@@ -35,7 +35,7 @@
       <% end %>
       <div class="logo">
         <% if color_index == 0 %>
-        <%= image_tag "bands/logo_purple.png" %>
+        <%= image_tag "bands/logo_red.png" %>
         <% elsif color_index == 1 %>
         <%= image_tag "bands/logo_green.png" %>
         <% else %>
