--- a/source/partials/_head.erb
+++ b/source/partials/_head.erb
@@ -11,7 +11,7 @@
   <meta name="author" content="">
   <meta property="og:title" content="<%= base_title %>" />
   <meta property="og:description" content="18-19-20 Maggio - Piacenza" />
-  <meta property="og:image" content="/img/og-image.jpg" />
+  <meta property="og:image" content="/img/og-image.png" />
 
   <%= favicon_tag 'favicon.ico' %>
 
