--- a/source/css/custom.css
+++ b/source/css/custom.css
@@ -730,6 +730,7 @@ body.fluid {
   width: 100%;
   text-transform: uppercase;
   font-size: 13px;
+  font-weight: bold;
   margin-top: 30px;
   border-spacing: 5px;
   border-collapse: separate;
@@ -743,11 +744,9 @@ body.fluid {
 }
 .agenda-container .schedule th {
   background-color: #000;
-  font-weight: normal;
 }
 .agenda-container .schedule thead th {
   font-size: 14px;
-  font-weight: bold;
   line-height: 1;
   padding-left: 5px;
   padding-right: 5px;
@@ -765,13 +764,13 @@ body.fluid {
   background-color: #d31313;
 }
 .agenda-container .schedule tr:nth-child(odd) {
-  background-color: rgba(168, 197, 205, 0.8);
+  background-color: #4d4d4d;
 }
 .agenda-container .schedule tr:nth-child(even) {
-  background-color: rgba(150, 179, 187, 0.8);
+  background-color: #333;
 }
 .agenda-container .schedule td {
-  color: #000;
+  color: #fff;
   padding: 0 14px;
 }
 .agenda-container .schedule td.band.link a {
